--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -4,6 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 20px;
+  color: #ffffff;
 }
 /* .HeroContainer div {
   display: flex;
