--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,11 @@
 body {
   background-color: #121212;
 }
+
+.accordianContainer {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
