--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -28,6 +28,8 @@
   margin-left: 10px;
   text-align: center;
   margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .follows {
   width: 55px;
@@ -37,6 +39,8 @@
   font-weight: 400;
   line-height: 15px;
   letter-spacing: 0px;
+  overflow: hidden;
+  text-overflow: ellipsis;
   /* text-align: center; */
 }
 
